--- a/Responsive Web Design/Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design/Personal Portfolio Webpage/index.html
@@ -1,1 +1,92 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="keywords" content="Kristian Bušta, developer, portfolio"/>
+    <meta name="description" content="Personal portfolio of Kristian Bušta, a beginner web developer"/>
+    <meta name="author" content="Kristian Bušta"/>
+  </head>
+  <body>
+    <script src="https://kit.fontawesome.com/50c022ec21.js" crossorigin="anonymous"></script>
+    <header>
+      <nav id="navbar">
+        <ul>
+          <li><a href="#welcome-section">Welcome</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="welcome-section" class="flex">
+            <h1>Hi 👋 I am <div class="name-background"><span>Kristian</span></div></h1>
+      <p>a beginner web developer</p>
+    </section>
+    <section id="projects">
+      <h2>These are some of my projects</h2>
+      <p class="emoji">👇</p>
+      <div class="grid">
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Product%20Landing%20Page" target="_blank"><div class="project-tile">
+          <img
+            src="https://i.ibb.co/MVtJyCC/Product-Landing-Page-1.png"
+            alt="Product Landing Page"
+            loading="lazy"
+          />
+          <p>Product Page</p>
+        </div></a>
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Technical%20Documentation%20Page" target="_blank"><div class="project-tile">
+          <img
+            src="https://i.ibb.co/gTzd98t/Technical-Documentation-Page-1.png"
+            alt="Technical Documentation Page"
+            loading="lazy"
+          />
+          <p>Technical Documentation</p>
+        </div></a>
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Tribute%20Page" target="_blank"><div class="project-tile">
+          <img
+            src="https://i.ibb.co/3y3hvYJ/Tribute-Page-1.png"
+            alt="Tribute Page"
+            loading="lazy"
+          />
+          <p>Tribute Page</p>
+        </div></a>
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Survey%20Form" target="_blank"><div class="project-tile">
+          <img
+            src="https://i.ibb.co/pJ9NjDf/Survey-Form-1.png"
+            alt="Survey Form"
+            loading="lazy"
+          />
+          <p>Survey Form</p>
+        </div></a>
+      </div>
+    </section>
+    <section id="contact" class="flex">
+      <h2>Let's get in touch</h2>
+      <p>if you want to work together</p>
+      <p class="emoji">🤝</p>
+      <div class="icons">
+        <div class="icon-container">
+          <a href="https://www.facebook.com/bustakristian/" target="_blank"><i class="fa-brands fa-facebook"></i>
+          <p>Facebook</p></a>
+        </div>
+        <div class="icon-container">
+          <a href="https://github.com/kristianbusta" target="_blank"><i class="fa-brands fa-github"></i>
+          <p>GitHub</p></a>
+        </div>
+        <div class="icon-container">
+          <a href="https://www.freecodecamp.org/kristianbusta" target="_blank"><i class="fa-brands fa-free-code-camp"></i>
+          <p>freeCodeCamp</p></a>
+        </div>
+        <div class="icon-container">
+          <a href="mailto: kristianbusta@proton.me"><i class="fa-solid fa-envelope"></i>
+          <p>Mail Me</p></a>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
