--- a/Responsive Web Design/Technical Documentation Page/index.html
+++ b/Responsive Web Design/Technical Documentation Page/index.html
@@ -1,1 +1,77 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Technical Documentation Page</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="keywords" content="documentation, page"/>
+    <meta name="description" content="Technical Documentation Page"/>
+    <meta name="author" content="Kristian Bušta"/>
+  </head>
+  <body>
+    <a href="#navbar"><img src="https://i.ibb.co/d41fXkM/back-to-top.png" alt="back to top"/></a>
+    <nav id="navbar">
+      <header>Technical Documentation</header>
+      <ul>
+	<li><a href="#lorem" class="nav-link">Lorem</a></li>
+	<li><a href="#ipsum" class="nav-link">Ipsum</a></li>
+	<li><a href="#dolor" class="nav-link">Dolor</a></li>
+	<li><a href="#sit" class="nav-link">Sit</a></li>
+	<li><a href="#amet" class="nav-link">Amet</a></li>
+      </ul>
+    </nav>
+    <main id="main-doc">
+      <section class="main-section" id="lorem">
+        <header>Lorem</header>
+	<div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet nisl mollis, congue nisl sit amet, luctus urna. Etiam aliquet erat vitae mauris congue euismod. Pellentesque ipsum leo, luctus ut ornare vitae, sagittis eu felis. Suspendisse volutpat, ligula vitae fermentum porta, elit orci viverra est, in efficitur metus mi eu sem. Pellentesque viverra mollis scelerisque. Mauris fringilla hendrerit interdum. Ut quis lacinia eros. Sed leo lorem, condimentum volutpat aliquam non, mattis id felis. Mauris placerat nisi mi. Phasellus tincidunt ornare purus sed blandit. Cras commodo ligula sed condimentum malesuada. Quisque ullamcorper, nisl sit amet sollicitudin porta, velit purus sodales velit, a elementum tellus ante ac ipsum. Vestibulum efficitur, lacus in pulvinar elementum, nisi nibh posuere tellus, sed pellentesque nisl arcu vel massa. Sed mollis rutrum neque, in tempus diam.</p>
+	</div>
+      </section>
+      <section class="main-section" id="ipsum">
+	<header>Ipsum</header>
+	<div>
+	<p>Donec maximus libero vitae tortor blandit ultrices. Pellentesque at nunc ut purus imperdiet venenatis ac at arcu. Fusce diam magna, fermentum nec ultrices eget, pulvinar nec urna.</p>
+	<code>console.log('Hello, World!');</code>
+	<p>Nulla id risus sed sem vulputate interdum. Ut tempus accumsan euismod. Pellentesque ac iaculis ex, vel volutpat urna. Morbi in arcu consequat, interdum tellus at, egestas risus. Nullam aliquam viverra metus quis eleifend. Nulla efficitur ex augue, ac efficitur eros tempus ut. Nam porttitor elit eget nisi pharetra viverra.</p>
+	</div>
+      </section>
+      <section class="main-section" id="dolor">
+	<header>Dolor</header>
+	<div>
+	<p>Vivamus auctor risus nec lobortis consequat. Sed efficitur ante sit amet turpis varius, ut volutpat risus pellentesque. Ut ac aliquam tellus. Ut ut ornare massa. Suspendisse lectus dui, congue eu finibus eu, pellentesque nec lacus. Praesent mollis vehicula ultrices. Duis elementum tortor sit amet consectetur faucibus. Praesent sit amet hendrerit massa.</p>
+	<code> html { box-sizing: border-box; }</code>
+	<p>Dolor sit amet.</p>
+	<code> * { box-sizing: inherit }</code>
+	<p>Proin imperdiet rutrum hendrerit. Donec blandit accumsan sem sit amet molestie. Etiam fringilla id risus quis facilisis. Vivamus auctor, nisi a viverra mollis, ante neque viverra neque, ac porta quam purus at ligula. Sed dolor nunc, volutpat vel convallis eget, varius in turpis. Mauris ac ante eget massa sagittis bibendum.</p>
+	</div>
+      </section>
+      <section class="main-section" id="sit">
+	<header>Sit</header>
+	<div>
+	<p>Aenean non purus mauris. Nullam imperdiet facilisis velit, eget mollis quam. Curabitur at ligula ac nisi bibendum dapibus. Mauris eget nulla felis. Pellentesque sit amet augue auctor, auctor sapien eu, fringilla erat. Curabitur fringilla, erat ultricies tempus consectetur, ligula mi tempus arcu, id convallis leo lacus id ipsum.</p>
+	<ul>
+	  <li>lorem</li>
+	  <li>ipsum</li>
+	  <li>dolor</li>
+	  <li>sit</li>
+	  <li>amet</li>
+	</ul>
+	<p>Maecenas quis ligula nec augue laoreet pellentesque. Sed venenatis, enim vitae commodo tristique, lorem nisl maximus purus, ac rhoncus elit odio non odio. Aliquam non rutrum lorem. Donec et risus vitae nisl luctus volutpat. Maecenas fermentum aliquam quam vel tincidunt.</p>
+        <code>&lt;!DOCTYPE html&gt;</code>
+	</div>
+      </section>
+      <section class="main-section" id="amet">
+	<header>Amet</header>
+	<div>
+	<p>Aenean quis neque vehicula risus vestibulum ultricies vitae vel ipsum. Nunc interdum sapien id nibh placerat, sit amet malesuada metus cursus. Phasellus porta scelerisque orci auctor faucibus. Quisque hendrerit orci ac ex eleifend egestas. In ut ex ornare, condimentum velit id, commodo ligula. Proin sodales accumsan nibh varius viverra. Proin eu mauris eu augue interdum tincidunt ac eu nulla. Donec sed nibh non quam mollis rutrum. Cras condimentum venenatis interdum. Mauris nulla arcu, sagittis quis auctor in, efficitur sed mi.</p>
+	<code>&lt;link rel="stylesheet" href="styles.css"&gt;</code>
+	<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet nisl mollis, congue nisl sit amet, luctus urna. Etiam aliquet erat vitae mauris congue euismod. Pellentesque ipsum leo, luctus ut ornare vitae, sagittis eu felis. Suspendisse volutpat, ligula vitae fermentum porta, elit orci viverra est, in efficitur metus mi eu sem. Pellentesque viverra mollis scelerisque. Mauris fringilla hendrerit interdum. Ut quis lacinia eros. Sed leo lorem, condimentum volutpat aliquam non, mattis id felis. Mauris placerat nisi mi. Phasellus tincidunt ornare purus sed blandit. Cras commodo ligula sed condimentum malesuada. Quisque ullamcorper, nisl sit amet sollicitudin porta, velit purus sodales velit, a elementum tellus ante ac ipsum.</p>
+	</div>
+      </section>
+    </main>
+    <footer>
+      <a href="https://www.flaticon.com/free-icons/back-to-top" target="_blank" title="back to top icons">Back to top icons created by Cuputo - Flaticon</a>
+    </footer>
+  </body>
+</html>
