--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Ada Lovelace</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="Ada Lovelace, mathematics, programming"/>
+    <meta name="description" content="A Tribute to Ada Lovelace"/>
+    <meta name="author" content="Kristian Bušta"/>
+  </head>
+  <body>
+    <main id="main">
+      <h1 id="title">Ada Lovelace</h1>
+      <p>the first computer programmer</p>
+      <figure id="img-div">
+	<img id="image" src="https://i.ibb.co/JkVWg7B/Ada-Lovelace-in-1852.jpg"/>
+	<figcaption id="img-caption">Ada Lovelace in 1852, the year of her death, at the age of 36.</figcaption>
+      </figure>
+      <h2 class="timeline">Ada Lovelace's Timeline</h2>
+      <section id="tribute-info">
+	<ul>
+	  <li><strong>1815</strong> | Born on December 10th in London, United Kingdom</li>
+	  <li><strong>1833</strong> | Ada met Charles Babbage, inventor of the first computer</li>
+	  <li><strong>1842 - 1843</strong> | Ada wrote the first computer program, an algorithm designed to be executed by Charles Babbage's Analytical Engine</li>
+	  <li><strong>1852</strong> | Ada died of uterine cancer on November 27th at the age of 36</li>
+	</ul>
+      </section>
+      <blockquote>
+        <p>“The more I study, the more insatiable do I feel my genius for it to be.”</p>
+	<cite>- Ada Lovelace</cite>
+      </blockquote>
+      <h2>Read more about Ada Lovelace on her <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Ada_Lovelace">Wikipedia Entry</a></h2>
+    </main>
+  </body>
+</html>
