--- a/Responsive Web Design/Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design/Personal Portfolio Webpage/index.html
@@ -31,7 +31,7 @@
       <h2>These are some of my projects</h2>
       <p class="emoji">👇</p>
       <div class="grid">
-        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Product%20Landing%20Page" target="_blank"><div class="project-tile">
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Responsive%20Web%20Design/Product%20Landing%20Page" target="_blank"><div class="project-tile">
           <img
             src="https://i.ibb.co/MVtJyCC/Product-Landing-Page-1.png"
             alt="Product Landing Page"
@@ -39,7 +39,7 @@
           />
           <p>Product Page</p>
         </div></a>
-        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Technical%20Documentation%20Page" target="_blank"><div class="project-tile">
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Responsive%20Web%20Design/Technical%20Documentation%20Page" target="_blank"><div class="project-tile">
           <img
             src="https://i.ibb.co/gTzd98t/Technical-Documentation-Page-1.png"
             alt="Technical Documentation Page"
@@ -47,7 +47,7 @@
           />
           <p>Technical Documentation</p>
         </div></a>
-        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Tribute%20Page" target="_blank"><div class="project-tile">
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Responsive%20Web%20Design/Tribute%20Page" target="_blank"><div class="project-tile">
           <img
             src="https://i.ibb.co/3y3hvYJ/Tribute-Page-1.png"
             alt="Tribute Page"
@@ -55,7 +55,7 @@
           />
           <p>Tribute Page</p>
         </div></a>
-        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Survey%20Form" target="_blank"><div class="project-tile">
+        <a href="https://github.com/kristianbusta/freeCodeCamp/tree/main/Responsive%20Web%20Design/Survey%20Form" target="_blank"><div class="project-tile">
           <img
             src="https://i.ibb.co/pJ9NjDf/Survey-Form-1.png"
             alt="Survey Form"
